Add About Page Text

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
 <body>
     <div class="main-container">
         {{>header}}
+        <p>This site was created by Vamsi. It uses data from <a href="https://www.mapbox.com/" target="_blank">mapbox</a> and <a href="https://darksky.net/" target="_blank">DarkSky</a></p>
     </div>
 
     {{>footer}}
